<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:gravity="center"
    android:padding="20dp">

    <!-- Message Display TextView -->
    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_marginBottom="20dp"/>

    <!-- First Button -->
    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/round_button"
        android:text="@string/done_chat_with_unknown"
        android:textColor="@android:color/white"
        android:visibility="visible" />

    <!-- Second Button -->
    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/done_chat_with_tim"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Third Button -->
    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/what_next"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Fourth Button -->
    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/DONE"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Fifth Button -->
    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/check_inbox"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Sixth Button -->
    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/new_mission"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Seventh Button -->
    <Button
        android:id="@+id/button7"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/new_voicemail"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Eighth Button -->
    <Button
        android:id="@+id/button8"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/system_update"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Ninth Button -->
    <Button
        android:id="@+id/button9"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/new_clue"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Tenth Button -->
    <Button
        android:id="@+id/button10"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/backup_data"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Eleventh Button -->
    <Button
        android:id="@+id/button11"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/decrypt_message"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Twelfth Button -->
    <Button
        android:id="@+id/button12"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/locate_key"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Thirteenth Button -->
    <Button
        android:id="@+id/button13"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/track_signal"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Fourteenth Button -->
    <Button
        android:id="@+id/button14"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/connect_vpn"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Fifteenth Button -->
    <Button
        android:id="@+id/button15"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/final_warning"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

</LinearLayout>
